--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <div id="setup">
         <h2>Wähle die Anzahl der Spieler:</h2>
         <div id="playerCountButtons">
-            <button onclick="setPlayerCount(8)">8</button>
-            <button onclick="setPlayerCount(9)">9</button>
-            <button onclick="setPlayerCount(10)">10</button>
-            <button onclick="setPlayerCount(11)">11</button>
-            <button onclick="setPlayerCount(12)">12</button>
-            <button onclick="setPlayerCount(13)">13</button>
-            <button onclick="setPlayerCount(14)">14</button>
-            <button onclick="setPlayerCount(15)">15</button>
+            <button data-count="8">8</button>
+            <button data-count="9">9</button>
+            <button data-count="10">10</button>
+            <button data-count="11">11</button>
+            <button data-count="12">12</button>
+            <button data-count="13">13</button>
+            <button data-count="14">14</button>
+            <button data-count="15">15</button>
         </div>
         <button id="startGame">Neues Spiel starten</button>
     </div>
