--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Werwolf App</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="setup">
@@ -22,6 +23,7 @@
     </div>
 
     <div id="gameArea" class="hidden">
+        <h2>Spielerliste:</h2>
         <ul id="playerList"></ul>
         <button id="assignRoles" class="hidden">Rollen zuweisen</button>
         <button id="nextPhase" class="hidden">Nächste Phase</button>
