--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
             <button data-count="14">14</button>
             <button data-count="15">15</button>
         </div>
-        <button id="startGame">Neues Spiel starten</button>
+        <button id="manualStart">Spiel mit manueller Zuweisung starten</button>
+        <button id="autoStart">Spiel mit automatischer Zuweisung starten</button>
     </div>
 
     <div id="gameArea" class="hidden">
