--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <ul id="playerList"></ul>
         <button id="assignRoles" class="hidden">Rollen zuweisen</button>
         <button id="nextPhase" class="hidden">Nächste Phase</button>
+        <button id="startNightPhaseButton">Nachtphase Starten</button>
     </div>
 
     <script src="app.js"></script>
