--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Werwolf Spielleiter-App</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
 <body>
-  <main id="screen-container">
-    <h1 id="screen-title">Werwolf: Düsterwald Deluxe</h1>
+  <main id="start-container">
+    <h1>Werwolf: Düsterwald Deluxe</h1>
+    <p>Die App für die Spielleitung</p>
+    <button id="start-game-btn">Spiel starten</button>
+  </main>
+
+  <main id="screen-container" style="display: none;">
+    <h2 id="screen-title"></h2>
     <p id="screen-purpose"></p>
     <div id="screen-meta"></div>
     <button id="next-btn">Weiter</button>
@@ -16,4 +14,3 @@
 
   <script src="app.js"></script>
 </body>
-</html>
