--- a/index.html
+++ b/index.html
@@ -12,5 +12,24 @@
     <button id="next-btn">Weiter</button>
   </main>
 
+  <main id="start-container">
+  <h1>Werwolf: Düsterwald Deluxe</h1>
+  <p>Wähle die Rollen, die in diesem Spiel aktiv sind:</p>
+
+  <form id="role-form">
+    <label><input type="checkbox" name="role" value="Öko Sabine" checked> Öko Sabine</label><br>
+    <label><input type="checkbox" name="role" value="Der Twink" checked> Der Twink</label><br>
+    <label><input type="checkbox" name="role" value="Der geile Priester" checked> Der geile Priester</label><br>
+    <label><input type="checkbox" name="role" value="Iltussy"> Iltussy</label><br>
+    <label><input type="checkbox" name="role" value="Fisterin Frida"> Fisterin Frida</label><br>
+    <label><input type="checkbox" name="role" value="Doppelmoral-Dörthe"> Doppelmoral-Dörthe</label><br>
+    <label><input type="checkbox" name="role" value="Suizid Susie"> Suizid Susie</label><br>
+    <label><input type="checkbox" name="role" value="Wut Wiebke"> Wut Wiebke</label><br>
+    <!-- Ergänze bei Bedarf weitere Rollen -->
+  </form>
+
+  <button id="start-game-btn">Spiel starten</button>
+</main>
+
   <script src="app.js"></script>
 </body>
